<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatrixActivity"
    android:background="@color/ex_light_blue">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/titleMargin"
                android:text="@string/matrixTitle"
                android:textAlignment="center"
                android:textSize="@dimen/titleTextSize"                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:fontFamily="@font/rajdhani_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matrix_a_text"
                    android:textSize="@dimen/stdTextSize"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/matAdim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/etMargin"
                    android:background="@drawable/rounded_corners_strong_blue"
                    android:padding="@dimen/etPadding"
                    android:minWidth="50dp"
                    android:minHeight="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/etTextSize"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/matAdim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/etMargin"
                    android:background="@drawable/rounded_corners_strong_blue"
                    android:padding="@dimen/etPadding"
                    android:minWidth="50dp"
                    android:minHeight="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/etTextSize"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:fontFamily="@font/rajdhani_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matrix_b_text"
                    android:textSize="@dimen/stdTextSize"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/matBdim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/etMargin"
                    android:background="@drawable/rounded_corners_strong_blue"
                    android:padding="@dimen/etPadding"
                    android:minWidth="50dp"
                    android:minHeight="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/etTextSize"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"/>
                <EditText
                    android:id="@+id/matBdim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/etMargin"
                    android:background="@drawable/rounded_corners_strong_blue"
                    android:padding="@dimen/etPadding"
                    android:minWidth="50dp"
                    android:minHeight="10dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/etTextSize"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnCalculate"
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/btnMargin"
                android:background="@drawable/rounded_corners_strong_blue"
                android:padding="@dimen/btnPadding"
                android:text="@string/btnCalculate"
                android:textColor="@color/white"
                android:textSize="@dimen/btnText"/>
            <TextView
                android:id="@+id/firstText"
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matrix_a"
                android:textColor="@color/black"
                android:textSize="@dimen/stdTextSize"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <TableLayout
                android:id="@+id/matA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/secondText"
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matrix_b"
                android:textColor="@color/black"
                android:textSize="@dimen/stdTextSize"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <TableLayout
                android:id="@+id/matB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/thirdText"
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_text"
                android:textSize="@dimen/stdTextSize"
                android:textColor="@color/black"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <TableLayout
                android:id="@+id/matC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/ferit"
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AboutMatrix"
                android:layout_margin="@dimen/stdMargin"
                android:textAlignment="center"
                android:background="@drawable/rounded_corners_light_blue"
                android:padding="@dimen/tvPadding"
                android:textColor="@color/black"
                android:textSize="@dimen/stdTextSize"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>