<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuadraticActivity"
    android:background="@color/ex_light_blue">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:fontFamily="@font/rajdhani_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/titleMargin"
            android:text="@string/quadraticTitle"
            android:textAlignment="center"
            android:textSize="@dimen/titleTextSize"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/qa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/etMargin"
                android:background="@drawable/rounded_corners_strong_blue"
                android:padding="@dimen/etPadding"
                android:minWidth="50dp"
                android:minHeight="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/etTextSize"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center"/>
            <TextView
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/etMargin"
                android:text="@string/eqText1"
                android:textColor="@color/black"
                android:paddingTop="@dimen/tvPadding"
                android:textSize="@dimen/etTextSize" />
            <EditText
                android:id="@+id/qb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/etMargin"
                android:background="@drawable/rounded_corners_strong_blue"
                android:padding="@dimen/etPadding"
                android:minWidth="50dp"
                android:minHeight="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/etTextSize"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center"/>
            <TextView
                android:fontFamily="@font/rajdhani_regular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/eqText2"
                android:textSize="@dimen/etTextSize"
                android:paddingTop="@dimen/tvPadding"
                android:layout_marginEnd="@dimen/etMargin"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/qc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/etMargin"
                android:background="@drawable/rounded_corners_strong_blue"
                android:padding="@dimen/etPadding"
                android:minWidth="50dp"
                android:minHeight="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/etTextSize"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/qSolutionPlaceholder"
            android:fontFamily="@font/rajdhani_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/resultText"/>
    <TextView
        android:fontFamily="@font/rajdhani_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutQuadratic"
        android:textAlignment="center"
        android:textSize="@dimen/stdTextSize"
        android:background="@drawable/rounded_corners_light_blue"
        android:layout_margin="@dimen/stdMargin"
        android:padding="@dimen/tvPadding" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>